<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanetActivity">

    <ImageView
        android:id="@+id/planetBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_galaxy_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/galaxy3" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/planetImage">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/mass"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.75"
                android:background="@color/text_bg"
                android:text="@string/mass_string"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/massValue"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.25"
                android:background="@color/text_bg"
                android:text="@string/mass_value"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/gravity"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.75"
                android:background="@color/text_bg"
                android:text="@string/gravity_string"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gravityValue"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.25"
                android:background="@color/text_bg"
                android:text="@string/gravity_value"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/colonies"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.75"
                android:background="@color/text_bg"
                android:text="@string/colonies_string"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/coloniesValue"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.25"
                android:background="@color/text_bg"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@string/colonies_value"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/military"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.75"
                android:background="@color/text_bg"
                android:text="@string/military_string"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/militaryValue"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.25"
                android:background="@color/text_bg"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@string/military_value"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/forceField"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.75"
                android:background="@color/text_bg"
                android:text="@string/force_field_string"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forceFieldValue"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.25"
                android:background="@color/text_bg"
                android:text="@string/force_field_value"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/planetName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/name_bg"
        android:text="@string/mercury_string"
        android:textAlignment="center"
        android:textColor="@color/name_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/planetBackground"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/planetBackground"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/planetImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/planet_image_content"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
        app:srcCompat="@drawable/mercury" />

    <Button
        android:id="@+id/save"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:drawable/ic_menu_save"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
</androidx.constraintlayout.widget.ConstraintLayout>